# CtrlAltDeliver

./: .gitignore  INTEGRATION_COMPLETE.md  README.md  app.py  demo.html  food101_classification (1).py  food101_classification.py  food_history.py  food_history_cli.py  gpu_test (1).py  ingredients_playlist.py  main3.py  mistraldescription.py  predict_food101 (1).py  predict_food101.py  pyproject.toml  requirements.txt  spotify_playlist.py  suno_status.py  sunoai.py  test_ollama.py
food-playlist-ui-mockup/: README.md  index.html  package-lock.json  package.json
food-playlist-ui-mockup/src/: App.tsx  index.css
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: AnalysisResults.tsx  AnimatedOrbs.tsx  DishcoveryBackground.tsx  DishcoveryLogo.tsx  FoodHistory.tsx  FoodUploader.tsx  FunFacts.tsx  InteractiveFoodCards.tsx
frontend/src/utils/: colorExtractor.ts  foodDatabase.ts
templates/: index.html
