[project]
name = "python-api"
version = "0.1.0"
description = "TOML file for Python API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aioice==0.10.1",
    "aiortc==1.13.0",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "appdirs==1.4.4",
    "appnope==0.1.4",
    "asgiref==3.9.2",
    "asttokens==3.0.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "av==14.4.0",
    "azure-ai-agents==1.2.0b5",
    "azure-ai-generative==1.0.0b11",
    "azure-ai-ml==1.29.0",
    "azure-ai-projects==1.0.0",
    "azure-ai-resources==1.0.0b9",
    "azure-common==1.1.28",
    "azure-core==1.35.0",
    "azure-core-tracing-opentelemetry==1.0.0b12",
    "azure-identity==1.25.0",
    "azure-mgmt-core==1.6.0",
    "azure-mgmt-resource==22.0.0",
    "azure-monitor-opentelemetry==1.8.1",
    "azure-monitor-opentelemetry-exporter==1.0.0b42",
    "azure-storage-blob==12.26.0",
    "azure-storage-file-datalake==12.21.0",
    "azure-storage-file-share==12.22.0",
    "backcall==0.2.0",
    "bcrypt==4.2.0",
    "beautifulsoup4==4.10.0",
    "beniget==0.4.1",
    "blinker==1.9.0",
    "Brotli==1.0.9",
    "cachelib==0.13.0",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloudevents==1.12.0",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "cryptography==46.0.2",
    "cycler==0.11.0",
    "databricks-sdk==0.67.0",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "deprecation==2.1.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "eval_type_backport==0.2.0",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "fastapi==0.118.0",
    "fixedint==0.1.6",
    "Flask==3.1.2",
    "Flask-Bcrypt==1.0.1",
    "Flask-Cors==5.0.0",
    "Flask-DebugToolbar==0.16.0",
    "Flask-Session==0.8.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WTF==1.2.1",
    "fonttools==4.29.1",
    "frozenlist==1.7.0",
    "fs==2.4.12",
    "gast==0.5.2",
    "gitdb==4.0.12",
    "GitPython==3.1.45",
    "google-api-core==2.25.1",
    "google-auth==2.41.1",
    "google-crc32c==1.7.1",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.1.1",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httplib2==0.20.2",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "idna==3.10",
    "ifaddr==0.2.0",
    "importlib_metadata==8.7.0",
    "ipykernel==6.29.5",
    "ipython==8.37.0",
    "ipython-genutils==0.2.0",
    "isodate==0.7.2",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jeepney==0.7.1",
    "Jinja2==3.1.4",
    "jiter==0.10.0",
    "jsonpath-python==1.0.6",
    "jsonschema==4.25.1",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.8.1",
    "keyring==23.5.0",
    "kiwisolver==1.3.2",
    "launchpadlib==1.10.16",
    "lazr.restfulclient==0.14.4",
    "lazr.uri==1.0.6",
    "lazy-object-proxy==1.12.0",
    "lxml==4.8.0",
    "lz4==3.1.3+dfsg",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "marshmallow==3.26.1",
    "matplotlib==3.5.1",
    "matplotlib-inline==0.1.7",
    "mcp==1.6.0",
    "mdurl==0.1.2",
    "mistralai==1.9.2",
    "mlflow-skinny==2.22.2",
    "more-itertools==8.10.0",
    "mpmath==0.0.0",
    "msal==1.34.0",
    "msal-extensions==1.3.1",
    "msgspec==0.19.0",
    "msrest==0.7.1",
    "multidict==6.6.4",
    "mypy-extensions==1.0.0",
    "nest-asyncio==1.6.0",
    "netifaces==0.11.0",
    "numpy==2.2.6",
    "oauthlib==3.2.0",
    "olefile==0.46",
    "ollama==0.6.0",
    "openai==2.0.0",
    "openapi-core==0.19.5",
    "openapi-schema-validator==0.6.3",
    "openapi-spec-validator==0.7.2",
    "opencensus==0.11.4",
    "opencensus-context==0.1.3",
    "opencensus-ext-azure==1.1.15",
    "opencensus-ext-logging==0.1.1",
    "opentelemetry-api==1.37.0",
    "opentelemetry-instrumentation==0.58b0",
    "opentelemetry-instrumentation-asgi==0.58b0",
    "opentelemetry-instrumentation-dbapi==0.58b0",
    "opentelemetry-instrumentation-django==0.58b0",
    "opentelemetry-instrumentation-fastapi==0.58b0",
    "opentelemetry-instrumentation-flask==0.58b0",
    "opentelemetry-instrumentation-psycopg2==0.58b0",
    "opentelemetry-instrumentation-requests==0.58b0",
    "opentelemetry-instrumentation-urllib==0.58b0",
    "opentelemetry-instrumentation-urllib3==0.58b0",
    "opentelemetry-instrumentation-wsgi==0.58b0",
    "opentelemetry-resource-detector-azure==0.1.5",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-semantic-conventions==0.58b0",
    "opentelemetry-util-http==0.58b0",
    "packaging==24.2",
    "parse==1.20.2",
    "parso==0.8.4",
    "pathable==0.4.4",
    "pdfminer.six==20250506",
    "pdfplumber==0.11.7",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "ply==3.11",
    "prance==25.4.8.0",
    "prompt_toolkit==3.0.51",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==6.32.1",
    "psutil==7.0.0",
    "psycopg2-binary==2.9.9",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pybars4==0.9.13",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pydantic_core==2.33.2",
    "pydash==8.0.5",
    "pyee==13.0.0",
    "Pygments==2.19.2",
    "PyJWT==2.3.0",
    "pylibsrtp==0.12.0",
    "PyMeta3==0.5.1",
    "pyOpenSSL==25.3.0",
    "pyparsing==2.4.7",
    "pypdfium2==4.30.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pythran==0.10.0",
    "pytz==2022.1",
    "PyYAML==5.4.1",
    "pyzmq==27.0.0",
    "redis==5.2.1",
    "referencing==0.36.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rfc3339-validator==0.1.4",
    "rich==14.0.0",
    "rpds-py==0.27.1",
    "rsa==4.9.1",
    "ruamel.yaml==0.18.15",
    "ruamel.yaml.clib==0.2.14",
    "scipy==1.15.3",
    "SecretStorage==3.3.1",
    "semantic-kernel==1.37.0",
    "shellingham==1.5.4",
    "simplegeneric==0.8.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.3.1",
    "SQLAlchemy==2.0.35",
    "sqlparse==0.5.3",
    "sse-starlette==2.3.6",
    "stack-data==0.6.3",
    "starlette==0.47.1",
    "strictyaml==1.7.3",
    "stripe==11.2.0",
    "sympy==1.9",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.16.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0",
    "ufoLib2==0.13.1",
    "unicodedata2==14.0.0",
    "urllib3==2.2.3",
    "uvicorn==0.34.3",
    "wadllib==1.3.6",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "websockets==15.0.1",
    "Werkzeug==3.1.1",
    "wrapt==1.17.3",
    "WTForms==3.1.2",
    "yarl==1.20.1",
    "zipp==3.23.0",
]